--- a/templates/index.html
+++ b/templates/index.html
@@ -113,9 +113,10 @@
                 type: "POST", dataType: "json", data: JSON.stringify({text: sendText.trim(), model: urlParams.get('model')})
             }).done(data => {
                 let newText = data.response;
-                newText = newText.replace(/[^\x00-\xFF]/g, "");
+                newText = newText.replace(/[^\x00-\xFF]/g, ""); //remove non-unicode
                 
-                //make sure spaces are correct; ignore punctuation
+                //Make sure spaces are correct; ignore punctuation
+                //This section is hack-y. Feel free to improve. 
                 let lastOld = getText().slice(-2,-1)
                 let firstNew = newText.slice(0,1)
                 if (lastOld !== " " && firstNew !== " ") { //no spaces
@@ -144,7 +145,7 @@
                     color: colorGrey
                 })
 
-                lastPosition = lastPosition + newText.length;
+                lastPosition = lastPosition + newText.length; // only relevant if addOnlyAtEnd is false
 
                 $( 'div.button' ).replaceWith(buttonMoarHTML);
             }).fail(() => {
@@ -162,7 +163,7 @@
                 let oldRange = args[1]
                 let source = args[2]
                 if (range) {
-                    if (range.length == 0) {
+                    if (range.length == 0) { 
                         lastPosition = range.index;
                         checkColor();
                     } else {
