--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 
 
     <p class="signature">
-        Made with ❤️ by Jason Benn, Austin Hou, Christina Kim, and Ben Mann <br />
+        Made with ❤️ by Jason Benn, Austin Hou, Christina Kim, and Ben Mann using the full OpenAI GPT-2 model<br />
         <a class="tallLineHeight" href="https://aiwriter.typeform.com/to/lh2l0F">Feedback?</a>
     </p>
 </section>
