--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://duet-0.appspot.com/">
+    <meta property="og:url" content="https://duet.li/">
     <meta property="og:title" content="Duet - The AI Cure to Writer's Block">
     <meta property="og:description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://duet.li/static/meta.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://duet-0.appspot.com/">
+    <meta property="twitter:url" content="https://duet.li/">
     <meta property="twitter:title" content="Duet - The AI Cure to Writer's Block">
     <meta property="twitter:description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="https://duet.li/static/meta.png">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
