--- a/templates/index.html
+++ b/templates/index.html
@@ -6,20 +6,20 @@
     <!-- Primary Meta Tags -->
     <title>Duet - The AI Cure to Writer's Block</title>
     <meta name="title" content="Duet - The AI Cure to Writer's Block">
-    <meta name="description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
+    <meta name="description" content="Add a dose of entropy to your creative writing with the power of GPT-2">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://duet.li/">
     <meta property="og:title" content="Duet - The AI Cure to Writer's Block">
-    <meta property="og:description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
+    <meta property="og:description" content="Add a dose of entropy to your creative writing with the power of GPT-2">
     <meta property="og:image" content="https://duet.li/static/meta.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://duet.li/">
     <meta property="twitter:title" content="Duet - The AI Cure to Writer's Block">
-    <meta property="twitter:description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
+    <meta property="twitter:description" content="Add a dose of entropy to your creative writing with the power of GPT-2">
     <meta property="twitter:image" content="https://duet.li/static/meta.png">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script
